# biosecurity-AMR

./: # design notes.md  # report.md  .gitattributes  .gitignore  M1_INTEGRATION.md  Makefile  README.md  environment-linux.yml  environment.yml  gemini-code-1784407331036.txt  genomes.list  pyproject.toml  requirements.txt
Bio Sentinel/: .env.example  GENOME_FIREWALL_INTEGRATION.md  vite.config.ts
bio_sentinel_ui/: .env.example  package-lock.json
bvbrc_data/: README.md  aureus_dedup_representatives.csv  aureus_genome_metadata.csv  genome_manifest.csv
config/: pipeline.yaml
configs/: drug_registry.toml  staphylococcus_aureus.toml
data/: README.md
dataset/: CHECKSUMS.sha256  DATASET_CARD.md  build_features.py  build_labels.py  build_splits.py  features_gene_presence.csv  fetch_amr_genes.py  genome_metadata.csv  genome_splits.csv  labels_long.csv  panel_summary.csv
docs/: implementation-roadmap.md  model-api-integration-plan.md  phenotype-policy.md  three-slide-design-prompt.md  video-transcript.md
environments/: amrfinder.yml
genome_firewall/: __init__.py  annotate.py  app.py  cli.py  dedup.py  fasta.py  knowledge.py  predict.py  report.py
gfw/: __init__.py  cli.py  config.py  decide.py  engine.py  engine_support.py  evaluate.py  m1_adapter.py  panel.py  predict.py  report.py  split.py
memory/: 86935087-e815-4e89-b41e-40430a51c523.jsonl  9065fe31-4189-4751-915e-01baad192ab7.jsonl  9318c317-d76e-47bb-b922-2fc433f264f8.jsonl  MEMORY.md  bdbbd3a6-bba8-453f-baa5-3ed191fb2e64.jsonl  cf140d3a-63f1-4488-b95e-2a4fecd4a7b4.jsonl  genome-firewall-key-decisions.md  project-genome-firewall.md  user-deterministic-no-llm-agents.md
models/: cefoxitin.joblib  ceftaroline.joblib  chloramphenicol.joblib  ciprofloxacin.joblib  clindamycin.joblib  daptomycin.joblib  erythromycin.joblib  fusidic_acid.joblib  gentamicin.joblib  levofloxacin.joblib  manifest.json  methicillin.joblib  moxifloxacin.joblib  mupirocin.joblib  oxacillin.joblib  penicillin.joblib  rifampin.joblib  tetracycline.joblib  trimethoprim_sulfamethoxazole.joblib
reports/: index.json  metrics.csv  metrics.json
sandbox/: app.py
scripts/: amrfinder_array.sh  amrfinder_config.sh  amrfinder_merge.sh  amrfinder_prep.sh  build_full_manifest.py  download_bvbrc_fastas.py  download_bvbrc_release_files.sh  evaluate.py  explore_amrfinder.py  fetch_references.py  generate_pilot_report.py  make_placeholder_features.py  (+9 more)
(+168 files in other folders)
