[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-firewall"
version = "1.0.0"
description = "Genome Firewall — S. aureus antibiotic-response prediction with a deterministic drug-target-presence gate (M2)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Genome Firewall team" }]
keywords = ["antimicrobial-resistance", "AMR", "biosecurity", "AMRFinderPlus", "pyrodigal", "pyhmmer"]

dependencies = [
  "pyrodigal>=3.7",
  "pyhmmer>=0.12",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "pyarrow>=14",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
gfw = "gfw.cli:main"

[tool.setuptools]
packages = ["gfw", "gfw.io", "gfw.targets"]
