[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genome-firewall"
version = "0.1.0"
description = "Biosecurity AMR project for HackNation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "pyyaml",
    "requests",
    "scikit-learn",
    "tqdm",
    "joblib"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
