[project]
name = "genome-firewall"
version = "0.1.0"
description = "Defensive AMR prediction research prototype for Staphylococcus aureus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.2.3,<3",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.0",
    "rich>=13.9.4",
    "scikit-learn>=1.7,<2",
    "streamlit>=1.43.0",
    "sourmash>=4.9.4,<5",
    "typer>=0.15.2",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "python-multipart>=0.0.32",
    "pyhmmer>=0.12.1",
    "pyrodigal>=3.7.1",
]

[project.scripts]
genome-firewall = "genome_firewall.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genome_firewall"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
